bin_PROGRAMS=precv psend
precv_SOURCES=precv.c h/types.h \
	      util.c h/util.h \
	      channel.c h/channel.h \
	      getargs.c h/getargs.h \
	      core.c h/core.h \
	      conn_mng.c h/conn_mng.h \
	      proxy.c h/proxy.h \
	      crono.c h/crono.h
psend_SOURCES=psend.c h/types.h \
	      util.c h/util.h \
	      channel.c h/channel.h \
	      getargs.c h/getargs.h \
	      core.c h/core.h \
	      conn_mng.c h/conn_mng.h \
	      proxy.c h/proxy.h \
	      crono.c h/crono.h
