LDADD=-lm
bin_PROGRAMS=precv psend
precv_SOURCES=precv.c h/types.h \
	      util.c h/util.h \
	      channel.c h/channel.h \
	      getargs.c h/getargs.h \
	      core.c h/core.h \
	      crono.c h/crono.h \
	      cqueue.c h/cqueue.h \
	      timeout.c h/timeout.h \
	      rqueue.c h/rqueue.h \
	      segment.c h/segment.h
psend_SOURCES=psend.c h/types.h \
	      util.c h/util.h \
	      channel.c h/channel.h \
	      getargs.c h/getargs.h \
	      core.c h/core.h \
	      crono.c h/crono.h \
	      cqueue.c h/cqueue.h \
	      timeout.c h/timeout.h \
	      rqueue.c h/rqueue.h \
	      segment.c h/segment.h
